tests/golden/compile-pass/visibility_private_same_module.rua
mod api {
    fn hidden() -> i64 {
        1
    }

    pub fn visible() -> i64 {
        hidden()
    }
}

fn main() {
    let value = api::visible();
}
