tests/golden/compile-fail/module_private_submodule_access.rua
mod outer {
    mod inner {
        pub fn value() -> i64 { 42 }
    }
}

fn main() {
    outer::inner::value();
}
